AlphaBetaAgent simulation, fixed removefirst()